test/e2e/chainsaw/single-header-based-httproute/assertions/httproute-initial.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-header
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - backendRefs:
        - name: single-header-based-httproute-stable-service
        - name: single-header-based-httproute-canary-service
          (weight): 0
