test/e2e/chainsaw/single-header-based-httproute/assertions/httproute-with-header-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-header
  namespace: default
spec:
  (length(rules)): 2
  rules:
    - backendRefs:
        - name: argo-rollouts-stable-service
          (weight): 70
        - name: argo-rollouts-canary-service
          (weight): 30
    - name: canary-route1
      matches:
        - headers:
            - name: X-Test
              type: Exact
              value: test
      backendRefs:
        - name: argo-rollouts-canary-service
